<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/baseline_home_24"
        android:iconTint="@color/selected_bottom_nav_color"
        android:title="@string/title_home" />
    <item
        android:id="@+id/navigation_history"
        android:icon="@drawable/baseline_history_24"
        android:iconTint="@color/selected_bottom_nav_color"
        android:title="@string/title_feature1" />

    <item
        android:id="@+id/navigation_camera"
        android:icon="@drawable/baseline_camera"
        android:iconTint="@color/selected_bottom_nav_color"
        android:title="@string/title_feature2" />

    <item
        android:id="@+id/navigation_recomendation"
        android:icon="@drawable/baseline_recomendation_24"
        android:iconTint="@color/selected_bottom_nav_color"
        android:title="@string/title_feature3" />
</menu>
