<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".profile.ProfileActivity"
    android:background="@color/white"
    android:padding="20dp">
    <!--    <data>-->
    <!--        &lt;!&ndash; Variable declarations &ndash;&gt;-->
    <!--    </data>-->
    <ImageView
        android:id="@+id/profileImageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="20dp"
        android:src="@drawable/baseline_account_circle_24"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/userNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/account_name"
        android:textSize="18sp"
        android:textColor="@android:color/black"
        app:layout_constraintTop_toBottomOf="@id/profileImageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/rewardButton"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/reward"
        android:textColor="@color/white"
        android:backgroundTint="@color/rewardColor"
        app:layout_constraintTop_toBottomOf="@id/userNameTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/logoutButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:text="@string/logout"
        android:textColor="@color/white"
        android:backgroundTint="@color/danger_color"
        app:layout_constraintTop_toBottomOf="@id/rewardButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>